fix nitro gift button hiding

--- a/CSS/LuLus_Super_CSS.css
+++ b/CSS/LuLus_Super_CSS.css
@@ -141,7 +141,7 @@ div[class*="userPopoutInner"i] [class*="usertext"i] [class*="usertagusername"i]:
 }
   
 /*Hide Gift Button*/
-button:has([d*="M-7,10 C-8.104999542236328,10 -9"]), div[class^='giftIcon i'] {
+button:has([class*='giftIcon' i]) {
   display: var(--showNitroButton);
 }
 
