--- a/CSS/LuLus_Super_CSS.css
+++ b/CSS/LuLus_Super_CSS.css
@@ -141,7 +141,7 @@ div[class*="userPopoutInner"i] [class*="usertext"i] [class*="usertagusername"i]:
 }
   
 /*Hide Gift Button*/
-button:has([class*='giftIcon' i]) {
+button:has([clip-path*='url(#__lottie_element_339)' i]) {
   display: var(--showNitroButton);
 }
 
