--- a/Themes/w9x/w9x.theme.css
+++ b/Themes/w9x/w9x.theme.css
@@ -10,7 +10,7 @@
  * @donate https://ko-fi.com/saltssaumure
 */
 
-@import url("https://github.com/LuSaffi/VenCordstuff/w9x.update.css");
+@import url("https://raw.githubusercontent.com/LuSaffi/VenCordstuff/refs/heads/main/Themes/w9x/w9x.update.css");
 
 /* See https://github.com/Saltssaumure/w9x-discord-theme#customisation for customisation settings. */
 :root {
