--- a/Themes/Midnight/midnight.css
+++ b/Themes/Midnight/midnight.css
@@ -48,6 +48,9 @@ body {
         backdrop-filter: var(--panel-backdrop-filter);
     }
 
+    .content_f75fb0{
+        min-height: 49.55rem;
+      }
 
     .base_c48ade /* base grid */ {
         display: grid;
@@ -150,7 +153,6 @@ body {
         margin-left: var(--gap);
         overflow: hidden;
         height: auto;
-        min-height: 49.55rem;
     }
     .members_c8ffbb /* member list inner */,
     .member_c8ffbb /* member list item */ {
