--- a/CSS/selfMessages.css
+++ b/CSS/selfMessages.css
@@ -1,3 +1,4 @@
+
 /* Selfmessages. Heavily based on Discord 11's Message bubbles */
 /* Message Bubbles */
 /* Modified by x3non to work with Vencord */
@@ -6,15 +7,16 @@
    #app-mount [class*=message][data-author-self=true] {
     margin-left: auto;
     width: auto;
-    padding-left: 48px;
-    padding-right: 16px !important;
+    padding-left: 1vw;
+    padding-right: 1.24vw !important;
+    max-width: fit-content;
   }
 
 [class^="messageListItem__"][data-is-self="true"] [class*=container]:not([class*=shiki]),
   [data-author-self=true] [class*=container]:not([class*=shiki]){
     direction: rtl;
     text-align: right;
-	 padding-right: 8px;
+	 padding-right: 2rem;
   }
 
 
@@ -27,9 +29,8 @@
 #app-mount [class^="messageListItem__"][data-is-self="true"] [class*=contents],
 #app-mount [class*=message][data-author-self=true] [class*=contents] {
     display: inline-flexbox;
-    width: fit-content;
     margin-left: auto;
-    margin-right: 8px;
+    margin-right: 2vw;
 }
 
   #app-mount [class^="messageListItem__"][data-is-self="true"][class*=message][class*=selected] [class*=contents],
@@ -37,12 +38,14 @@
     width: 100%;
   }
 
+
   #app-mount [class^="messageListItem__"][data-is-self="true"] [class*=timestamp],
   #app-mount [class*=message][data-author-self=true] [class*=timestamp] {
     left: unset;
     right: 8px;
     margin-top: 1.75px;
 }
+
 
   #app-mount [class^="messageListItem__"][data-is-self="true"] [class*=replying] [class*=contents] [class*=messageContent]::before,
   #app-mount [class^="messageListItem__"][data-is-self="true"] [class*=mentioned] [class*=contents] [class*=messageContent]::before,
@@ -55,8 +58,8 @@
 #app-mount [class^="messageListItem__"][data-is-self="true"] [class*=contents] [class*=messageContent],
 #app-mount [class*=message] [data-author-self=true] [class*=content] [class*=messageContent]{
     margin-left: auto;
-    background-color: var(--bg-4) !important;
-    border-radius: 5px;
+    background-color: #1996bd81 !important;
+    padding: 0.3vw 0.5vw 0.3vw 0.5vw;
 }
 
   #app-mount [class^="messageListItem__"][data-is-self="true"] a:not([class*=embed] [class*=embedAuthorNameLink]),
@@ -70,7 +73,8 @@
   #app-mount [class*=message][data-author-self=true] [class*=embedAuthor] {
     direction: ltr;
   }
-
+  
+/* Self Avatar Icon */
   #app-mount [class^="messageListItem__"][data-is-self="true"] [class*=avatar],
   #app-mount [class*=message][data-author-self=true] [class*=avatar]{
     left: unset;
@@ -81,6 +85,7 @@
     right: 0px !important;
   }
 
+/* Self Username Tweaks */
   #app-mount [class^="messageListItem__"][data-is-self="true"] [class*=header],
   #app-mount [class*=message] [data-author-self=true] [class*=header] {
     display: flex;
@@ -93,21 +98,18 @@
     margin-right: unset;
   }
 
-  #app-mount [class*=contents] pre {
+/* resize fixing */
+  #app-mount [class*=contents] pre,
+  #app-mount [class*=message] {
     max-width: 100%;
   }
   
   #app-mount [class*=contents] [class*=messageContent] {
-    background-color: var(--bg-3);
-    padding: 1px;
+    background-color: var(--bg-base-tertiary);
+    padding: 0.3vw 0.5vw 0.3vw 0.5vw;
     margin-left: unset;
     width: fit-content;
-    border-radius: 5px;
-  }
-
-
-  #app-mount [class*=message] {
-    max-width: 100%;
+    border-radius: 0.7vw;
   }
 
 
@@ -121,17 +123,16 @@
     padding-bottom: 8px;
   }
 
-  
-  #app-mount .mentioned_fa6fd2 .contents_d3ae0d .messageContent_abea64 {
-    background-color: var(--background-mentioned);
+  #app-mount .mentioned__5126c .contents_c19a55 .messageContent_c19a55 {
+    background-color: var(--mention);
   }
 
-  #app-mount .mentioned_fa6fd2:hover .contents_d3ae0d  .messageContent_abea64,
-  #app-mount .mentioned_fa6fd2.selected_e3bc5d .contents_d3ae0d .messageContent_abea64 {
-    background-color: var(--background-mentioned-hover);
+  #app-mount .mentioned__5126c:hover .contents_c19a55  .messageContent_c19a55,
+  #app-mount .mentioned__5126c.selected__5126c .contents_c19a55 .messageContent_c19a55 {
+    background-color: var(--mention-hover);
   }
 
-  #app-mount .mentioned_fa6fd2 .contents_d3ae0d .messageContent_abea64::before {
+  #app-mount .mentioned__5126c .contents_c19a55 .messageContent_c19a55::before {
     content: "";
     position: absolute;
     display: block;
@@ -144,8 +145,8 @@
     z-index: 1;
   }
   
-  #app-mount .repliedMessage__636d2 {
-    background-color: var(--background-message-hover);
+  #app-mount .repliedMessage_c19a55 {
+    background-color: var(--message-hover);
     margin-bottom: 0;
     padding: 6px;
     border-radius: 5px;
